--- a/cfg-branch/gcc/ChangeLog.4
+++ b/cfg-branch/gcc/ChangeLog.4
@@ -4104,7 +4104,7 @@ Sat Nov 11 18:41:20 2000  Mark P Mitchell  <mark@codesourcery.com>
 	(cpp_get_token): Handle empty macro expansions.  Don't worry
 	about CPP_PLACEMARKERs.
 	(_cpp_create_definition): Empty macros are now empty.
-	(cpp_macro_defintion): Don't special case empty macros.
+	(cpp_macro_definition): Don't special case empty macros.
 	* scan-decls.c: Don't bother with CPP_PLACEMARKERs.
 	* c-lex.c: Similarly.
 
@@ -10131,7 +10131,7 @@ Tue Aug 29 22:29:58 2000  Denis Chertykov  <denisc@overta.ru> & Marek Michalkiew
 	(adjust_insn_length): Use output_movsisf, output_movqi,
 	output_movhi for insn length adjusting.
 	(reg_unused_after): Use dead_or_set_p.
-	(preferred_reload_class): Now havn't any restriction.
+	(preferred_reload_class): Now haven't any restriction.
 	(reg_was_0): New function.
 	(io_address_p): Likewise.
 	(const_int_pow2_p): Likewise.
