* c-decl.c (duplicate_decls): Copy DECL_SAVED_TREE.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47494 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-30  Richard Henderson  <rth@redhat.com>
+
+	* c-decl.c (duplicate_decls): Copy DECL_SAVED_TREE.
+
 2001-11-30  Aldy Hernandez  <aldyh@redhat.com>
 
         * config/rs6000/rs6000.h (CALL_REALLY_USED_REGISTERS): New.
