--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-30  Aldy Hernandez  <aldyh@redhat.com>
+
+	* config/rs6000/rs6000.h (STARTING_FRAME_OFFSET): Adjust for altivec.
+        (STACK_DYNAMIC_OFFSET): Same.
+
 2001-11-30  Richard Henderson  <rth@redhat.com>
 
 	* c-decl.c (duplicate_decls): Copy DECL_SAVED_TREE.
