--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-30  Stephane Carrez  <Stephane.Carrez@sun.com>
+
+	* config/sparc/sparc.c (DF_MODES_NO_S): Fix pr/3623, define to
+	accept DFmode and DImode only.
+
 2001-11-30  Aldy Hernandez  <aldyh@redhat.com>
 
 	* config/rs6000/rs6000.h (STARTING_FRAME_OFFSET): Adjust for altivec.
