--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+Fri Nov 30 20:54:02 2001  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Make-lang.in: Delete references to proj.[co], proj-h.[co].
+	* proj.c: Delete file.
+
 2001-11-29  Zack Weinberg  <zack@codesourcery.com>
 
 	* Make-lang.in (f/fini, f/intdoc): Depend on $(HOST_LIBDEPS)
