* gencheck.c, gengenrtl.c: Don't define xmalloc. 	* gensupport.c: Don't define xstrdup, xcalloc, xrealloc, 	xmalloc. 	* f/fini.c: Use xmalloc.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47506 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-01  Zack Weinberg  <zack@codesourcery.com>
+
+	* gencheck.c, gengenrtl.c: Don't define xmalloc.
+	* gensupport.c: Don't define xstrdup, xcalloc, xrealloc,
+	xmalloc.
+
 2001-11-30  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* pa.c (output_ascii): Cast `p' to unsigned char.
