--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-01  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* class.c (finish_struct): Remove trailing periods from messages.
+	* decl.c (check_tag_decl): Similarly.
+	* lex.c (cxx_set_yydebug): Similarly.
+	* typeck2.c (friendly_abort): Similarly.
+
 2001-11-29  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/3048
