--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,12 @@
+2001-12-02  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* objc.dg/alias.m: Update.
+	* objc.dg/class-1.m: Update.
+	* objc.dg/const-str-1.m: Update.
+	* objc.dg/fwd-proto-1.m: Update.
+	* objc.dg/id-1.m: Update.
+	* objc.dg/super-class-1.m: Update.
+
 2001-11-29  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.old-deja/g++.pt/memtemp100.C: Remove non-standard
