* Makefile.am (nat_files, x_nat_files): Make sure the dependencies 	don't get deleted if compilation fails. 	* Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47520 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-02  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* Makefile.am (nat_files, x_nat_files): Make sure the dependencies
+	don't get deleted if compilation fails.
+	* Makefile.in: Rebuilt.
+
 2001-11-30  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* Makefile.am (nat_headers, x_nat_headers): Depend on .class files, not
