--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,13 @@
+2001-12-02  Tang Ching-Hui  <nicholas@cs.nthu.edu.tw>
+	    Alexandre Petit-Bianco  <apbianco@redhat.com>
+
+	* expr.c: call save_expr on array for correct evaluation order, 
+	modified comment, fixed indentation.
+	* parse.y: (patch_assignment): Correctly extract the array base
+	from the tree generate by build_java_arrayaccess, added comments.
+	(patch_array_ref): Remove SAVE_EXPR on ARRAY_REF.
+	Fixes PR java/3096, PR java/3803, PR java/3965.
+
 2001-12-01  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* expr.c (expand_byte_code): Remove trailing periods from messages.
