2001-12-02  Toon Moene  <toon@moene.indiv.nluug.nl>
	* Fix typos in ChangeLog.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47531 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,7 +1,7 @@
-2001-01-02  Toon Moene  <toon@moene.indiv.nluug.nl>
+2001-12-02  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	PR fortran/4885
-	* endfile.c (t_runc): After ftruncate. seek to end-of-file.
+	* endfile.c (t_runc): After ftruncate, seek to end-of-file.
 
 2001-11-25  Toon Moene  <toon@moene.indiv.nluug.nl>
 
